Adds javadoc and fix checkStyle. (#4)